tests/ui/test_generic_value_into.stderr
error: a generic called `VALUE` is not supported, please rename it.
 --> $DIR/test_generic_value_into.rs:5:19
  |
5 | struct DoNotDoThis<VALUE> {
  |                   ^^^^^^^
